add filter to the products
